  external term list file.

* `tidy_counts` added to converts a wide matrix of counts to tidy form (tags are
  stretched long-wise with corresponding counts of tags).

* `set_meta_tags` added for setting the `metatags` attribute on a
  `term_count/`token_count` object.  This can also be controlled by separators
  in the term/token list passed to `term_count/`token_count`.

MINOR FEATURES

* `important_terms` picks up a plot method corresponding to the `frequent_terms`
  plot method.

* `term_count` checks for duplicate categories within tiers for hierarchical
  term lists.

* `read_term_list` checks for valid regex.

IMPROVEMENTS

* `validate_model` now uses `classify` before validating to assign tags.

* `tag_co_occurrence` used a grid + base plotting approach that required
  restarting the graphics device between plots.  This dependency has been
  replaces with a dependency on **ggraph** for plotting networks as grid
  objects.

* `plot.validate_model` now shows tag counts in the sample to provide a relative
  importance of the accuracy in making decisions.

* Open, unescaped or regexes [(i.e., `|)` unescaped pipe followed by a closing
  group character] are now caught and warned for `read_term_list` and thus
  `term_count`.

CHANGES

* The **stopwords** package replaces the **tm** package for providing default
  stopword lists.  The **stopwords** package is more comprehensive and lighter
  weight.  This changes allows the removal of the **tm** package as a dependency.
  Suggested by Ken Benoit issue #69.

* `important_terms` now uses `quanteda::dfm_tfidf` rather than `tm::weightTfIdf`.
  This means the tf-idf weighting is done is base 10 log rather than base 2 as
  done with the **tm** package.  Suggested by Ken Benoit issue #69.

* `as_dtm` & `as_tdm` moved to the **gofastr** package where they can be used by
  other packages and their classed objects.  **termco** re-exports the two
  functions.
