@@ -106,6 +106,7 @@ export(rename_tags)
 export(search_term)
 export(search_term_collocations)
 export(search_term_which)
+export(select_counts)
 export(set_meta_tags)
 export(source_term_list)
 export(split_data)
