@@ -26,7 +26,7 @@ library(dplyr)
 
 term_list <- list(
     `if` = c('if'),
-    ans = c('an'),
+    ands = c('an'),
     or = c('or'),
     buts = c('but')
 )
